--- a/gb/ncid280_4.md
+++ b/gb/ncid280_4.md
@@ -20,7 +20,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/28/n11553151.md#1" target="_blank">宁杭高速一大客车与货车相撞 至少36死36伤</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/28/n11553151.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Untitled-3-150x120.gif" align ="left"></a>28日，连接江苏南京至浙江杭州的宁杭高速公路，一辆旅游大客车与货车相撞，宜兴警方当日通报称，事故至少造成6人死亡，8人重伤。29日，警方就事故再发通报称，截至28日下午4时，已造成36人死亡，另有36人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月29日 4:27 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/25/n11546432.md#1" target="_blank">消息：谈判恢复后 中方拟购买更多美国猪肉</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/25/n11546432.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/07/707170534351164-150x120.jpg" align ="left"></a>财经通讯社彭博社周三（9月25日）引述中国知情人士的消息说，随着美中准备10月的华盛顿新一轮贸易谈判，以及中共政府正应对国内猪肉短缺之“战”，一些中国企业准备购买更多的美国猪肉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月26日 5:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/18/n11530054.md#1" target="_blank">知情人揭湖南女村支书“灭门案”背后内情</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/18/n11530054.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/IMG_8415-150x120.jpg" align ="left"></a>9月15日，湖南常德市临澧县新安镇樟木村发生一起杀人事件，女村支书黄卫华及其婆婆、公公被杀死，凶手跳楼自杀，当地警方极力封锁消息，凶手家属对于事件表示质疑，一名知情村民向大纪元记者讲述了事件的来胧去脉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 10:24 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/10/25/n11611902.md#1" target="_blank">河南化工厂爆炸致1人死 珠海商铺突发大火</a><br></h3>10月25日上午，河南一家化工厂发生爆炸，目前已知事故造成1人死亡。现场画面显示，火势凶猛，现场掀起“蘑菇云”。附近居民表示，爆炸发生时自家房子颤抖，家中有玻璃被震碎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月25日 7:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/17/n11526938.md#1" target="_blank">黄河现今年第3号洪水 丹江口现最大入库洪水</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/9/17/n11526938.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/11/61113050225459-150x120.jpg" align ="left"></a>近期因持续降雨，导致陕西关中、陕南6市15县区40,571人受灾，黄河出现2019年第3号洪水；丹江口水库也迎来今年最大入库洪水。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月17日 8:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/10/24/n11609061.md#1" target="_blank">河北兴华钢铁厂发生火灾 导致7人死亡</a><br></h3>10月24日，中共河北应急管理厅网站消息，今天（24日）凌晨日3时30分，邯郸武安河北兴华钢铁有限公司烧结车间皮带通廊着火，导致7人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/10/24/n11609128.md#1" target="_blank">上海普陀发生严重交通事故 已致5死9伤</a><br></h3>10月24日上午9时25分许，上海金沙江路发生严重交通事故，目前已致5死9伤。有现场目击者回忆事发瞬间时说，一辆小车在行驶时忽然加速冲向人群，一辆白色轿车和几辆电动车避让不及被撞飞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/10/15/n11589376.md#1" target="_blank">“像在炸山一样”广西化工厂爆炸4死6伤</a><br></h3>10月15日上午，广西玉林一家化工厂发生爆炸，官方消息称，事故已造成4死6伤，其中2人重伤。涉事的工厂附近的一家企业负责人形容爆炸的巨响和震感“就像在炸山一样”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月15日 6:10 PM							</td></tr>
