--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -1,7 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717811.md#1" target="_blank">王友群：严惩人权恶棍 捍卫天赋人权</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717811.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1003182344381160-600x400-1-150x120.jpg" align ="left"></a>12月10日是“国际人权日”。美国总统川普宣布：2019年12月10日为“人权日”，2019年12月15日为“人权法案日”，2019年12月8日开始的一周为“人权周”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 6:56 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716947.md#1" target="_blank">【名家专栏】中美之间正爆发新的冷战吗？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716947.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/a6187da8c741623b9054fbd61c3d6501-150x120.jpg" align ="left"></a>对于中共崛起的性质，以及它是否会对美国构成生死存亡的威胁，人们的看法各不相同。历史和经验常常会让我们看到一系列的事实，同时却让我们对其它的事实视而不见。我们的经验和我们所依据的信息会影响我们的感知，并导致我们产生某些偏见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:32 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717877.md#1" target="_blank">程晓容：人权、人质、人民币与中加关系</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717877.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/Capture-5-150x120.jpg" align ="left"></a>12月10日，加拿大国会通过了一项议案，将设立由12名议员组成的特别委员会，全方位地检视中加关系。这一决定显示，加拿大朝野对特鲁多政府的对华政策都有不满。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717546.md#1" target="_blank">常忍：中共迫害未停 世人已明真相</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/2019-10-12-mh-persecution-panxing-2-600x400-1-150x120.png" align ="left"></a>据不完全信息统计，二零一九年十一月份至少有49名法轮功学员被非法判刑，77人被非法庭审，44人被抓捕，124人被构陷到检察院、法院，13名65岁以上老年法轮功学员被冤判和非法庭审。仅今年一至十一月份，就有683人遭非法判刑，89名法轮功学员被迫害离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717433.md#1" target="_blank">袁斌：中共的自夸自信与“达克效应”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1507ffd4f2d45bd4_ttl7dayKII_2-tian_anmen-GettyImages-146038593-600x400-150x120.jpg" align ="left"></a>12月9日，第16个国际反腐败日。
 
@@ -17,6 +14,7 @@
 
 现在，距离大选日还有1个月。民进党候选人是现任总统蔡英文，国民党候选人是高雄市长韩国瑜，亲民党候选人是党主席宋楚瑜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716611.md#1" target="_blank">何清涟：掌门大方“容错” 官商“戴罪立功”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716611.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/f6794ca9d96477d94cf96b4dae7e5ede-150x120.jpg" align ="left"></a>长达19个月的中美贸易战，导致全球产业链重置，加剧了中国经济困境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:29 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716547.md#1" target="_blank">谭笑飞：中共急于达成贸易协议吗？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716547.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1J50IR-600x400-150x120.jpg" align ="left"></a>12月2日，美国商务部长罗斯称川普已经明确表示，如果12月15日前中美贸易谈判没有进展，将如期加税。12月6日，中共官方公布正在考虑豁免部分美国进口大豆和猪肉的报复性关税。12月9日，中共商务部高级官员表示愿意推进谈判和磋商，尽快取得满意的结果。这些迹象似乎显示中共慑于高关税的压力，急于与美国达成贸易协议。笔者倾向于认.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711700.md#1" target="_blank">大成漫画：求党活摘前列腺</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11711700.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/174bd05b602f06be4205e77bb7840c18-150x120.jpg" align ="left"></a>中共阅兵有亮点，
 实名入厕世罕见，
 华夏尽出新鲜事；
@@ -32,7 +30,9 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11714225.md#1" target="_blank">颜丹：从硅谷再现印度裔CEO说起</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11714225.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1508102226592066-600x400-150x120.jpg" align ="left"></a>曾有调查显示，“83%的受访印度人认为自由实践自己的信仰很重要，这代表印度人支持宗教信仰自由，比全球平均74%要高”。这或许正是印度裔CEO即便没有具体的宗教信仰，也不影响国民普遍重视信仰的印度盛产CEO、并打造出能与美国比肩的精英教育的关键原因所在。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:40 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11712979.md#1" target="_blank">严晓：田汉之死? ? ?</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11712979.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201131525541002_1-150x120.jpg" align ="left"></a>近日偶读黄仁宇回忆著名歌词作者田汉的文字，感慨系之。
 黄仁宇抗战时因与田汉长子田海男是军校同窗好友而结识田汉，并与田海男一起得其关照，成为国民党抗日名将阙汉骞、郑洞国麾下将士，赴滇缅战场作战。当时身为共产党员的田汉，按照党组织安排进入国共合作之国民政府作抗战宣传工作，官拜少将。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:19 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717584.md#1" target="_blank">文武：没有共产党 中国会怎样</a><br></h3>这个话题是这些年来说得比较多的一个话题，之所以这是一个话题，而且是一个重大的话题，是因为中共一直在欺骗中国人民，一直在宣称没有共产党就没有新中国，有了共产党、人民才得解放。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:30 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11714186.md#1" target="_blank">张菁：大陆写字楼空置率创新高的背后</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11714186.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-477948958-600x400-150x120.jpg" align ="left"></a>无论是住房按揭贷款的快速增长，还是房地产开发商过度融资，过度负债，都是通过金融高杠杆在玩转房地产市场，而这种金融高杠杆一定会使得中国居民及房地产商过度负债，其风险随时都可能爆发。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:57 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11712614.md#1" target="_blank">【名家专栏】美宪法规定总统制定外交政策</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11712614.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1187847517-150x120.jpg" align ="left"></a>众议院民主党人对川普总统的弹劾案集中在外交政策而不是内政的过失。这在美国历史上是前所未有的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 10:42 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709511.md#1" target="_blank">海风：十大理由 中共为何受困于香港</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/photo_2019-08-18_23-05-42-600x400-1-150x120.jpg" align ="left"></a>“今日新疆，明天香港！ ” 这是12.8国际人权日80万香港民众再次上街游行打出的标语。这次游行从下午开始持续到夜晚，示威者用手机灯光点亮了夜空。香港反送中运动从6月9日开始，已即将进入第7个月。香港问题之所以久拖不解，这其中主要原因还是来自中共无视民意。理由如下：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717417.md#1" target="_blank">郑纯清：迎接“国际人权日”香港大游行的里程牌意义</a><br></h3>区选大翻盘，乾坤正倒转。
 欲火中明珠，辉光更夺目。
 迎接人权日，灭共再兴师。
@@ -46,7 +46,6 @@
 
 北约成立的时间很凑巧，是1949年，与中共建政同年。可能天意自有安排，但当初成立时，是为了对付以苏联为首的华沙条约组织，现在由跨越欧洲和北美的29个国家组成，北约军事开支占世界国防开支的70%。北.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/6/n11706333.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（8）</a><br></h3>亚氏逻辑学概念获取的基本要求是含义明确，不含混，唯一确定。以其为基础的近代科学更是立足于精确定义的概念，多数概念利用属种差方法来定义。这种概念与近代科学的认识论基础相一致的是，虽然在含义的精确性上有着优势，但是往往缺乏表达能力，会造成近代科学中的复杂性和非线性问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:54 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716547.md#1" target="_blank">谭笑飞：中共急于达成贸易协议吗？</a><br></h3>12月2日，美国商务部长罗斯称川普已经明确表示，如果12月15日前中美贸易谈判没有进展，将如期加税。12月6日，中共官方公布正在考虑豁免部分美国进口大豆和猪肉的报复性关税。12月9日，中共商务部高级官员表示愿意推进谈判和磋商，尽快取得满意的结果。这些迹象似乎显示中共慑于高关税的压力，急于与美国达成贸易协议。笔者倾向于认.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11716489.md#1" target="_blank">项云：对女性禽兽不如恶魔行径戳穿中共画皮</a><br></h3>有中共起，它就响当当叫喊男女平等，批判“旧社会”欺压妇女，新社会妇女“翻身得解放”，“妇女能顶半边天”等等，似乎很尊重妇女。可是，迫害法轮功二十余年，爆料出冰山一角对女性法轮功学员的迫害，恶魔禽兽不如案例比比皆是遍及中国所有角落：毒打、酷刑、电击、针刺、剥光衣服冷冻、浇冷水、不许睡觉，强奸、轮奸；烫烙、击打和电击生理器.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715313.md#1" target="_blank">廖祖笙：习近平快意于虐待老人和儿童？</a><br></h3>习近平先生，你说要全面建成小康社会，说要坚决打赢脱贫攻坚战……类似的表述可谓百转千回、余音绕梁，而你治下的现实，却是一次次这般耳光响亮。匪区庶民普遍是一种怎样惨淡的活法，在此姑置不论，单是我家，为了一个吃饭的问题，这回就已是第二轮向你苦苦申诉了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:22 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715029.md#1" target="_blank">李春草：红色陷阱</a><br></h3>中央美梦霸四方，国人恐惧与日涨；
@@ -56,5 +55,6 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11714881.md#1" target="_blank">李桦：中国人权、民主、法治倒退 致各阶层恐慌</a><br></h3>近些年来，在一党执政中共所领导的中国给我最深刻的印象应该就是“倒退”这两个字，中国正面临着有史以来最大的倒退，更可怕的是广大人民还没有意识到，还被蒙在鼓里。
 
 第一：中国底层人民的恐慌：说起中国底层人民首先我想到的是农民，中国有近6亿的农村人口。他们生活在基础条件非常差的农村，2018年统计，中国农民平均净收入为2.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:54 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11712910.md#1" target="_blank">严晓：老朽不死是为贼</a><br></h3>最近重读俄国伟大的思想家赫尔岑的《往事与追思》，我发现，这部写于一百六十多年前的巨著到今天仍然有着难得的现实意义，别的不说，单是贯穿全书的“速死论”，便令我再次拜倒在这位大师面前，惊为神人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:33 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
